--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "mbed"]
-	path = mbed
+[submodule "uart_i2c_conv"]
+	path = uart_i2c_conv
 	url = https://github.com/K4zuki/uart_i2c_conv.git
