--- a/doc/data/commandSandP_ro.yaml
+++ b/doc/data/commandSandP_ro.yaml
@@ -1,13 +1,18 @@
 signal:
   - name: "区分"
-    wave: "x==...=.=x"
-    data: ["head","slave address(R)","data length","tail"]
+    wave: " l.l.l.l.h"
+    node: ".a.b.c.d.e.f"
   - name: "コマンド"
-    wave: "x==.=.===x"
+    wave: "x=.=====.x"
     data: ["S","0x?8","0x?1","0x?0","0x?4","P"]
   - name: "16進数(マスク = 0x30)"
-    wave: "x==.=.===x"
+    wave: "x=.=====.x"
     data: ["0x53","0x38","0x31","0x30","0x34","0x50"]
   - name: "アスキー文字列"
-    wave: "x==.=.===x"
-    data: ['"S"','"8"','"0"','"0"','"4"','"P"']
+    wave: "x=.=====.x"
+    data: ['"S"','"8"','"1"','"0"','"4"','"P"']
+edge:
+  - a<->b head
+  - b<->c slave address
+  - c<->d read length
+  - d<->e tail
