[ DOC ] start using bitfield for register description tables
- register 0
- register 1

--- a/doc/Makefile
+++ b/doc/Makefile
@@ -116,7 +116,8 @@ endif
 
 bitfield: $(BITDIR) $(BITPNG)
 $(IMAGEDIR)/$(BITDIR)/%.png: $(TARGETDIR)/%.bitjson
-	$(BITFIELD) --input $< --vspace 80 --hspace 640 --lanes 1 --bits 8 > $<.svg
+	$(BITFIELD) --input $< --vspace 80 --hspace 640 --lanes 1 --bits 8 \
+	--fontfamily monospace --fontsize 16 > $<.svg
 	$(RSVG) $<.svg --format=png --output=$@
 
 yaml2json: $(WAVEDIR) $(BITDIR) $(WAVEJSON) $(BITJSON)
