--- a/doc/data/waves/commandE_rw.yaml
+++ b/doc/data/waves/commandE_rw.yaml
@@ -1,45 +1,45 @@
 signal:
-  - name: <tt>区分</tt>
+  - name: 区分
     wave: "hll.l.l..l..lh"
     node: ".ab.c.d..e..fg"
-  - name: <tt>コマンド</tt>
+  - name: コマンド
     wave: "x==.=.=..=..=x"
     data: [
-          <tt>E</tt>,
-          <tt>0x_0 _2</tt>,
-          <tt>0x_0 _2</tt>,
-          <tt>0x_D _E _A _D</tt>,
-          <tt>0x_B _E _A _F</tt>,
-          <tt>P</tt>]
-  - name: <tt>
+          E,
+          0x_0 _2,
+          0x_0 _2,
+          0x_D _E _A _D,
+          0x_B _E _A _F,
+          P]
+  - name:
           16進数(マスク = 0x30)
-          </tt>
+
     wave: "x==.=.=..=..=x"
     data: [
-          <tt>0x45</tt>,
-          <tt>0x30 0x32</tt>,
-          <tt>0x30 0x32</tt>,
-          <tt>0x3D 0x3E 0x3A 0x3D</tt>,
-          <tt>0x3B 0x3E 0x3A 0x3F</tt>,
-          <tt>0x50</tt>]
-  - name: <tt>
+          0x45,
+          0x30 0x32,
+          0x30 0x32,
+          0x3D 0x3E 0x3A 0x3D,
+          0x3B 0x3E 0x3A 0x3F,
+          0x50]
+  - name:
           アスキー文字列
-          </tt>
+
     wave: "x==.=.=..=..=x"
     data: [
-        <tt>E</tt>,
-        <tt>02</tt>,
-        <tt>02</tt>,
-        "<tt>=>:'</tt>",
-        "<tt>;>:?</tt>",
-        <tt>P</tt>]
+        E,
+        "02",
+        "02",
+        "=>:'",
+        ";>:?",
+        P]
 edge:
-  - a<->b <tt>head</tt>
-  - b<->c <tt>data length(W)</tt>
-  - c<->d <tt>data length(R)</tt>
-  - d<->e <tt>sending data</tt>
-  - e<->f <tt>dummy data</tt>
-  - f<->g <tt>tail</tt>
+  - a<->b head
+  - b<->c data length(W)
+  - c<->d data length(R)
+  - d<->e sending data
+  - e<->f dummy data
+  - f<->g tail
 config:
   hscale: 2
   font-family: Ricty Diminished
